--- a/site-releases/0.6.1-incubating/src/site/xdoc/download.xml.vm
+++ b/site-releases/0.6.1-incubating/src/site/xdoc/download.xml.vm
@@ -24,7 +24,7 @@ under the License.
           xsi:schemaLocation="http://maven.apache.org/XDOC/2.0 http://maven.apache.org/xsd/xdoc-2.0.xsd">
 
   <properties>
-    <title>Apache Incubator Helix Downloads</title>
+    <title>Apache Helix Downloads</title>
     <author email="dev@helix.incubator.apache.org">Apache Helix Documentation Team</author>
   </properties>
 
@@ -34,11 +34,11 @@ under the License.
         <param name="class" value="toc"/>
       </macro>
     </div>
-    
-    <section name="Introduction">
+
+    <section name="Apache Helix Downloads">
       <p>Apache Helix artifacts are distributed in source and binary form under the terms of the
         <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.
-        See the included <tt>LICENSE</tt> and <tt>NOTICE</tt> files included in each artifact for additional license 
+        See the included <tt>LICENSE</tt> and <tt>NOTICE</tt> files included in each artifact for additional license
         information.
       </p>
       <p>Use the links below to download a source distribution of Apache Helix.
@@ -48,54 +48,6 @@ under the License.
     <section name="Release">
       <p>Release date: ${releaseDate} </p>
       <p><a href="releasenotes/release-${releaseName}.html">${releaseName} Release notes</a></p>
-      <a name="mirror"/>
-      <subsection name="Mirror">
-
-        <p>
-          [if-any logo]
-          <a href="[link]">
-            <img align="right" src="[logo]" border="0"
-                 alt="logo"/>
-          </a>
-          [end]
-          The currently selected mirror is
-          <b>[preferred]</b>.
-          If you encounter a problem with this mirror,
-          please select another mirror.
-          If all mirrors are failing, there are
-          <i>backup</i>
-          mirrors
-          (at the end of the mirrors list) that should be available.
-        </p>
-
-        <form action="[location]" method="get" id="SelectMirror" class="form-inline">
-          Other mirrors:
-          <select name="Preferred" class="input-xlarge">
-            [if-any http]
-            [for http]
-            <option value="[http]">[http]</option>
-            [end]
-            [end]
-            [if-any ftp]
-            [for ftp]
-            <option value="[ftp]">[ftp]</option>
-            [end]
-            [end]
-            [if-any backup]
-            [for backup]
-            <option value="[backup]">[backup] (backup)</option>
-            [end]
-            [end]
-          </select>
-          <input type="submit" value="Change" class="btn"/>
-        </form>
-
-        <p>
-          You may also consult the
-          <a href="http://www.apache.org/mirrors/">complete list of mirrors.</a>
-        </p>
-
-      </subsection>
       <subsection name="${releaseName} Sources">
         <table>
           <thead>
@@ -107,12 +59,12 @@ under the License.
           <tbody>
             <tr>
               <td>
-                <a href="[preferred]incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip">helix-${releaseName}-src.zip</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip">helix-${releaseName}-src.zip</a>
               </td>
               <td>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip.asc">asc</a>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip.md5">md5</a>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip.sha1">sha1</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip.asc">asc</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip.md5">md5</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/src/helix-${releaseName}-src.zip.sha1">sha1</a>
               </td>
             </tr>
           </tbody>
@@ -129,22 +81,22 @@ under the License.
           <tbody>
             <tr>
               <td>
-                <a href="[preferred]incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar">helix-core-${releaseName}-pkg.tar</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar">helix-core-${releaseName}-pkg.tar</a>
               </td>
               <td>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar.asc">asc</a>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar.md5">md5</a>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar.sha1">sha1</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar.asc">asc</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar.md5">md5</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-core-${releaseName}-pkg.tar.sha1">sha1</a>
               </td>
             </tr>
             <tr>
               <td>
-                <a href="[preferred]incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar">helix-admin-webapp-${releaseName}-pkg.tar</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar">helix-admin-webapp-${releaseName}-pkg.tar</a>
               </td>
               <td>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar.asc">asc</a>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar.md5">md5</a>
-                <a href="http://www.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar.sha1">sha1</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar.asc">asc</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar.md5">md5</a>
+                <a href="http://archive.apache.org/dist/incubator/helix/${releaseName}/binaries/helix-admin-webapp-${releaseName}-pkg.tar.sha1">sha1</a>
               </td>
             </tr>
           </tbody>
@@ -157,22 +109,22 @@ under the License.
 
     <section name="Verifying Releases">
       <p>We strongly recommend you verify the integrity of the downloaded files with both PGP and MD5.</p>
-      
-      <p>The PGP signatures can be verified using <a href="http://www.pgpi.org/">PGP</a> or 
-      <a href="http://www.gnupg.org/">GPG</a>. 
-      First download the <a href="http://www.apache.org/dist/incubator/helix/KEYS">KEYS</a> as well as the
-      <tt>*.asc</tt> signature file for the particular distribution. Make sure you get these files from the main 
+
+      <p>The PGP signatures can be verified using <a href="http://www.pgpi.org/">PGP</a> or
+      <a href="http://www.gnupg.org/">GPG</a>.
+      First download the <a href="http://archive.apache.org/dist/incubator/helix/KEYS">KEYS</a> as well as the
+      <tt>*.asc</tt> signature file for the particular distribution. Make sure you get these files from the main
       distribution directory, rather than from a mirror. Then verify the signatures using one of the following sets of
       commands:
 
         <source>$ pgp -ka KEYS
 $ pgp helix-*.zip.asc</source>
-      
+
         <source>$ gpg --import KEYS
 $ gpg --verify helix-*.zip.asc</source>
        </p>
-    <p>Alternatively, you can verify the MD5 signature on the files. A Unix/Linux program called  
-      <code>md5</code> or 
+    <p>Alternatively, you can verify the MD5 signature on the files. A Unix/Linux program called
+      <code>md5</code> or
       <code>md5sum</code> is included in most distributions.  It is also available as part of
       <a href="http://www.gnu.org/software/textutils/textutils.html">GNU Textutils</a>.
       Windows users can get binary md5 programs from these (and likely other) places:
